force-app/main/default/objects/Retail_Product_Replacement_Form__c/Retail_Product_Replacement_Form__c.object-meta.xml
<CustomObject>
    <label>Retail Product Replacement Form</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Form No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Product Replacement Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>