force-app/main/default/objects/Retail_Product_Replacement_Form__c/fields/Quantity_Replaced__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Replaced__c</fullName>
    <label>Quantity Replaced</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>