force-app/main/default/objects/Retail_Product_Replacement_Form__c/fields/Retail_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Retail_Product_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Retail Product Group</label>
    <referenceTo>Retail_Product_Group__c</referenceTo>
    <relationshipLabel>Retail Product Replacement Forms</relationshipLabel>
    <relationshipName>Retail_Product_Replacement_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>