force-app/main/default/objects/Retail_Product_Replacement_Form__c/fields/Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Owner</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>Retail Product Replacement Forms</relationshipLabel>
    <relationshipName>Retail_Product_Replacement_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>