force-app/main/default/objects/Retail_Product_Replacement_Form__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Retail_Warehouse__c</referenceTo>
    <relationshipLabel>Retail Product Replacement Forms</relationshipLabel>
    <relationshipName>Retail_Product_Replacement_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>